eksup/tests/snapshots/e2e__filter_recommended_text.snap
---
source: eksup/tests/e2e.rs
expression: output
---
┌────────┬────┬──────┬───────────┬────────────┬──────────┐
│ CHECK  │    │ NAME │ NAMESPACE │ KIND       │ REPLICAS │
├────────┼────┼──────┼───────────┼────────────┼──────────┤
│ K8S002 │ ❌ │ web  │ default   │ Deployment │ 2        │
└────────┴────┴──────┴───────────┴────────────┴──────────┘
┌────────┬────┬──────┬───────────┬────────────┬──────────────┬───────────────────────────┐
│ CHECK  │    │ NAME │ NAMESPACE │ KIND       │ ANTIAFFINITY │ TOPOLOGYSPREADCONSTRAINTS │
├────────┼────┼──────┼───────────┼────────────┼──────────────┼───────────────────────────┤
│ K8S005 │ ❌ │ web  │ default   │ Deployment │ false        │ false                     │
└────────┴────┴──────┴───────────┴────────────┴──────────────┴───────────────────────────┘
┌────────┬────┬──────┬───────────┬────────────┬─────────────────┐
│ CHECK  │    │ NAME │ NAMESPACE │ KIND       │ READINESS PROBE │
├────────┼────┼──────┼───────────┼────────────┼─────────────────┤
│ K8S006 │ ❌ │ web  │ default   │ Deployment │ false           │
└────────┴────┴──────┴───────────┴────────────┴─────────────────┘
