eksup/tests/snapshots/e2e__insufficient_control_plane_ips_text.snap
---
source: eksup/tests/e2e.rs
expression: output
---
┌────────┬────┬──────────┬──────────────┐
│ CHECK  │    │ ID       │ AVAILABLEIPS │
├────────┼────┼──────────┼──────────────┤
│ EKS001 │ ❌ │ use1-az1 │ 3            │
│ EKS001 │ ❌ │ use1-az2 │ 2            │
└────────┴────┴──────────┴──────────────┘
