eksup/tests/snapshots/e2e__mixed_findings_text.snap
---
source: eksup/tests/e2e.rs
expression: output
---
┌────────┬────┬──────────┬──────────────┐
│ CHECK  │    │ ID       │ AVAILABLEIPS │
├────────┼────┼──────────┼──────────────┤
│ EKS001 │ ❌ │ use1-az1 │ 3            │
│ EKS001 │ ❌ │ use1-az2 │ 100          │
└────────┴────┴──────────┴──────────────┘
┌────────┬────┬────────┬───────┬───────────────┬──────┐
│ CHECK  │    │ NAME   │ NODE  │ CONTROL PLANE │ SKEW │
├────────┼────┼────────┼───────┼───────────────┼──────┤
│ K8S001 │ ⚠️ │ node-1 │ v1.28 │ v1.30         │ +2   │
└────────┴────┴────────┴───────┴───────────────┴──────┘
┌────────┬────┬──────┬───────────┬────────────┬──────────┐
│ CHECK  │    │ NAME │ NAMESPACE │ KIND       │ REPLICAS │
├────────┼────┼──────┼───────────┼────────────┼──────────┤
│ K8S002 │ ❌ │ web  │ default   │ Deployment │ 1        │
└────────┴────┴──────┴───────────┴────────────┴──────────┘
┌────────┬────┬──────┬───────────┬────────────┬─────────┐
│ CHECK  │    │ NAME │ NAMESPACE │ KIND       │ SECONDS │
├────────┼────┼──────┼───────────┼────────────┼─────────┤
│ K8S003 │ ⚠️ │ web  │ default   │ Deployment │ 0       │
└────────┴────┴──────┴───────────┴────────────┴─────────┘
┌────────┬────┬──────┬───────────┬────────────┬──────────────┬───────────────────────────┐
│ CHECK  │    │ NAME │ NAMESPACE │ KIND       │ ANTIAFFINITY │ TOPOLOGYSPREADCONSTRAINTS │
├────────┼────┼──────┼───────────┼────────────┼──────────────┼───────────────────────────┤
│ K8S005 │ ❌ │ web  │ default   │ Deployment │ false        │ false                     │
└────────┴────┴──────┴───────────┴────────────┴──────────────┴───────────────────────────┘
┌────────┬────┬──────┬───────────┬────────────┬─────────────────┐
│ CHECK  │    │ NAME │ NAMESPACE │ KIND       │ READINESS PROBE │
├────────┼────┼──────┼───────────┼────────────┼─────────────────┤
│ K8S006 │ ❌ │ web  │ default   │ Deployment │ false           │
└────────┴────┴──────┴───────────┴────────────┴─────────────────┘
